2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/test/__init__.py:
	  Moved project import to "get_project" method to avoid circular
	  import-loops.

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/action.py:
	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/tags/mpl2.py:
	* lib/gaupol/gtk/delegates/fileopen.py:
	* lib/gaupol/gtk/delegates/menuupdate.py:
	* lib/gaupol/gtk/dialogs/filechooser.py:
	* lib/gaupol/gtk/dialogs/preferences.py:
	* lib/gaupol/gtk/dialogs/spellcheck.py:
	  Use enumerate() for looping.
	  Fixed a few nested double-loopings both with index "i".

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/__init__.py:
	* lib/gaupol/gtk/delegates/__init__.py:
	* lib/gaupol/test/__init__.py:
	  Use dir() instead of inspect.getmembers().

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/util/listlib.py:
	  Use built-in sorted function.

	* lib/gaupol/gtk/application.py:
	  Fixed testing.

	* lib/gaupol/gtk/dialogs/language.py:
	* lib/gaupol/gtk/dialogs/preferences.py:
	  Commented testing out for now.

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Indented testing output.
	  (parse_options): Added description for parser.

	* lib/gaupol/gtk/dialogs/about.py:
	* lib/gaupol/gtk/dialogs/debug.py:
	* lib/gaupol/gtk/dialogs/encoding.py:
	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Added or fixed testing.

	* lib/gaupol/test/__init__.py:
	  (Test.get_micro_dvd_path): Use prefix and suffix.
	  (Test.get_subrip_path): Use prefix and suffix.
	  (run): Do not execute variables. Indented output.

2006-01-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/page.py:
	* lib/gaupol/test/__init__.py:
	  Moved assert_store method from gaupol.test.Test to
	  gaupol.gtk.page.Page and corrected all references.

2006-01-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/project.py: